--- a/prj.conf
+++ b/prj.conf
@@ -7,3 +7,4 @@ CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_UART_LINE_CTRL=y
+CONFIG_HEAP_MEM_POOL_SIZE=1024
