--- a/prj.conf
+++ b/prj.conf
@@ -8,3 +8,16 @@ CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_UART_LINE_CTRL=y
 CONFIG_HEAP_MEM_POOL_SIZE=1024
+
+
+
+# fs_dirent structures are big.
+CONFIG_MAIN_STACK_SIZE=2048
+
+# Let __ASSERT do its job
+CONFIG_DEBUG=y
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
